src/z80asm/z80asm2/t/20-preproc/expected/defvars_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defvars_11.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/defvars_11.asm...
t/20-preproc/input/defvars_11.asm:3:12: error: Expected identifer or DS keyword in DEFVARS directive
               .B 2+3*4
               ^
# file: t/20-preproc/input/defvars_11.asm
EndOfLine	"\n"	7:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
